[tool.poetry]
name = "decoy"
version = "2.3.0"
description = "Opinionated mocking library for Python"
authors = ["Michael Cousins <michael@cousins.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mcous/decoy"
homepage = "https://michael.cousins.io/decoy/"
documentation = "https://michael.cousins.io/decoy/"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Mocking",
    "Typing :: Typed",
]

[tool.poetry.urls]
"Changelog" = "https://github.com/mcous/decoy/releases"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
poethepoet = [
    { version = "0.19.0", python = "<3.8" },
    { version = "0.30.0", python = ">=3.8, <3.9" },
    { version = "0.35.0", python = ">=3.9" },
]

[tool.poetry.group.test.dependencies]
coverage = [
    { version = "7.2.7", extras = [
        "toml",
    ], python = "<3.8" },
    { version = "7.6.1", extras = [
        "toml",
    ], python = ">=3.8, <3.9" },
    { version = "7.9.1", extras = [
        "toml",
    ], python = ">=3.9" },
]
mypy = [
    { version = "1.4.1", python = "<3.8" },
    { version = "1.14.1", python = ">=3.8, <3.9" },
    { version = "1.16.0", python = ">=3.9" },
]
pytest = [
    { version = "7.4.4", python = "<3.8" },
    { version = "8.3.5", python = ">=3.8, <3.9" },
    { version = "8.4.0", python = ">=3.9" },
]
pytest-asyncio = [
    { version = "0.21.2", python = "<3.8" },
    { version = "0.24.0", python = ">=3.8, <3.9" },
    { version = "1.0.0", python = ">=3.9" },
]
pytest-mypy-plugins = [
    { version = "2.0.0", python = "<3.8" },
    { version = "3.1.2", python = ">=3.8, <3.9" },
    { version = "3.2.0", python = ">=3.9" },
]
pytest-xdist = [
    { version = "3.5.0", python = "<3.8" },
    { version = "3.6.1", python = ">=3.8, <3.9" },
    { version = "3.7.0", python = ">=3.9" },
]
ruff = "0.11.13"

[tool.poetry.group.docs.dependencies]
mkdocs = { version = "1.6.1", python = ">=3.10" }
mkdocs-material = { version = "9.6.14", python = ">=3.10" }
mkdocstrings = { version = "0.29.1", extras = ["python"], python = ">=3.10" }

[tool.poe.tasks]
all = [
    "check",
    "lint",
    "format-check",
    "test-once",
    "coverage",
    "docs-build",
    "build",
]
check = "mypy"
lint = "ruff check ."
format = "ruff format ."
format-check = "ruff format --check ."
test = "pytest -f"
test-once = "coverage run --branch --source=decoy -m pytest --mypy-same-process"
coverage = "coverage report"
coverage-xml = "coverage xml"
docs = "mkdocs serve"
docs-build = "mkdocs build"
build = "poetry build"
check-ci = ["check", "lint", "format-check"]
test-ci = ["test-once", "coverage-xml"]
build-ci = ["docs-build", "build"]

[tool.poetry.plugins."pytest11"]
"decoy" = "decoy.pytest_plugin"

[tool.pytest.ini_options]
addopts = "--color=yes --mypy-ini-file=tests/typing/mypy.ini --mypy-only-local-stub"
asyncio_mode = "auto"

[tool.mypy]
files = ["decoy", "tests"]
plugins = ["decoy/mypy/plugin.py"]
strict = true
show_error_codes = true

[tool.coverage.report]
exclude_lines = ["@overload", "if TYPE_CHECKING:"]

[tool.ruff]
target-version = "py37"
extend-exclude = [".cache"]

[tool.ruff.lint]
select = ["ANN", "B", "D", "E", "F", "RUF", "W"]
ignore = ["ANN401", "D107", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
