[project]
name = "decoy"
version = "2.2.2"
description = "Opinionated mocking library for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
authors = [
    {name = "Michael Cousins", email = "michael@cousins.io>"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Mocking",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://michael.cousins.io/decoy/"
Documentation = "https://michael.cousins.io/decoy/"
Repository = "https://github.com/mcous/decoy"
Issues = "https://github.com/mcous/decoy/issues"
Changelog = "https://github.com/mcous/decoy/releases"

[project.entry-points."pytest11"]
"decoy" = "decoy.pytest_plugin"

[dependency-groups]
dev = [
    "poethepoet (==0.19.0) ; python_version < '3.8'",
    "poethepoet (==0.30.0) ; python_version >= '3.8' and python_version < '3.9'",
    "poethepoet (==0.35.0) ; python_version >= '3.9'",
]

test = [
  "coverage[toml] (==7.2.7) ; python_version < '3.8'",
  "coverage[toml] (==7.6.1) ; python_version >= '3.8' and python_version < '3.9'",
  "coverage[toml] (==7.9.1) ; python_version >= '3.9'",
  "mypy (==1.4.1) ; python_version < '3.8'",
  "mypy (==1.14.1) ; python_version >= '3.8' and python_version < '3.9'",
  "mypy (==1.16.0) ; python_version >= '3.9'",
  "pytest (==7.4.4) ; python_version < '3.8'",
  "pytest (==8.3.5) ; python_version >= '3.8' and python_version < '3.9'",
  "pytest (==8.4.0) ; python_version >= '3.9'",
  "pytest-asyncio (==0.21.2) ; python_version < '3.8'",
  "pytest-asyncio (==0.24.0) ; python_version >= '3.8' and python_version < '3.9'",
  "pytest-asyncio (==1.0.0) ; python_version >= '3.9'",
  "pytest-mypy-plugins (==2.0.0) ; python_version < '3.8'",
  "pytest-mypy-plugins (==3.1.2) ; python_version >= '3.8' and python_version < '3.9'",
  "pytest-mypy-plugins (==3.2.0) ; python_version >= '3.9'",
  "pytest-xdist (==3.5.0) ; python_version < '3.8'",
  "pytest-xdist (==3.6.1) ; python_version >= '3.8' and python_version < '3.9'",
  "pytest-xdist (==3.7.0) ; python_version >= '3.9'",
  "ruff (==0.14.7)"
]

docs = [
    "mkdocs (==1.6.1) ; python_version >= '3.10'",
    "mkdocs-material (==9.6.21) ; python_version >= '3.10'",
    "mkdocstrings[python] (==0.30.1) ; python_version >= '3.10'"
]

[tool.poe.tasks]
all = [
    "check",
    "lint",
    "format-check",
    "test-once",
    "coverage",
    "build-docs",
    "build-package",
]
check = "mypy"
lint = "ruff check ."
format = "ruff format ."
format-check = "ruff format --check ."
test = "pytest -f"
test-once = "coverage run --branch --source=decoy -m pytest --mypy-same-process"
coverage = "coverage report"
coverage-xml = "coverage xml"
docs = "mkdocs serve"
build-docs = "mkdocs build"
build-package = "poetry build"
check-ci = ["check", "lint", "format-check"]
test-ci = ["test-once", "coverage-xml"]

[tool.pytest.ini_options]
addopts = "--color=yes --mypy-ini-file=tests/typing/mypy.ini --mypy-only-local-stub"
asyncio_mode = "auto"

[tool.mypy]
files = ["decoy", "tests"]
plugins = ["decoy/mypy/plugin.py"]
strict = true
show_error_codes = true

[tool.coverage.report]
exclude_lines = ["@overload", "if TYPE_CHECKING:"]

[tool.ruff]
target-version = "py37"
extend-exclude = [".cache"]

[tool.ruff.lint]
select = ["ANN", "B", "D", "E", "F", "RUF", "W"]
ignore = ["ANN401", "D107", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
